--- a/Portfolio 3 -  Admin Page/index.html
+++ b/Portfolio 3 -  Admin Page/index.html
@@ -15,5 +15,119 @@
 
     <link rel="stylesheet" href="style.css" />
   </head>
-  <body></body>
+  <body>
+    <div class="container">
+      <header></header>
+      <nav></nav>
+
+      <main>
+        <section class="grid-container">
+          <!-- <div class="title"> -->
+          <h1 class="title">Dashboard</h1>
+          <!-- </div> -->
+
+          <div class="card1">
+            <div class="card-left">
+              <h3>Earning (Monthly)</h3>
+              <p>$400,000</p>
+            </div>
+            <i class="fa-solid fa-calendar card-right"></i>
+          </div>
+          <div class="card2">
+            <div class="card-left">
+              <h3>Earning (Annual)</h3>
+              <p>$800,000</p>
+            </div>
+            <i class="fa-solid fa-dollar-sign card-right"></i>
+          </div>
+          <div class="card3">
+            <div class="card-left">
+              <h3>Tasks</h3>
+              <p>13</p>
+            </div>
+
+            <i class="fa-solid fa-list-check card-right"></i>
+          </div>
+          <div class="card4">
+            <div class="card-left">
+              <h3>Requests</h3>
+              <p>26</p>
+            </div>
+
+            <i class="fa-solid fa-message card-right"></i>
+          </div>
+          <div class="chart">
+            <h3>Earning Overrivew</h3>
+            <canvas id="myChart" style="width: 100%; height: 80%; padding: 2%">
+            </canvas>
+          </div>
+          <div class="tasks">
+            <h3>Tasks</h3>
+            <!-- <hr /> -->
+            <div class="tasks-contents">
+              <p>Borrowed Rents</p>
+              <p>14</p>
+            </div>
+            <!-- <hr> -->
+            <div class="tasks-contents">
+              <p>Trello Requests</p>
+              <p>2</p>
+            </div>
+            <!-- <hr> -->
+            <div class="tasks-contents">
+              <p>Marked Comments</p>
+              <p>14</p>
+            </div>
+          </div>
+          <div class="empty"></div>
+        </section>
+      </main>
+    </div>
+
+    <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+
+    <script>
+      var ctx = document.getElementById("myChart").getContext("2d");
+      var myChart = new Chart(ctx, {
+        type: "line",
+        data: {
+          labels: [
+            "January",
+            "January",
+            "March",
+            "April",
+            "May",
+            "June",
+            "July",
+          ],
+
+          datasets: [
+            {
+              label: "Monthly",
+              data: [12, 19, 3, 5, 2, 3, 45],
+              backgroundColor: "blue",
+              borderColor: "black",
+              borderWidth: 4,
+              fill: {
+                target: "origin",
+                above: "blue", // Area will be red above the origin
+                below: "rgb(0, 0, 255)", // And blue below the origin
+              },
+            },
+          ],
+        },
+        options: {
+          responsive: false,
+          scales: {
+            y: {
+              beginAtZero: true,
+            },
+          },
+
+          // end of options
+        },
+        // end of myChart
+      });
+    </script>
+  </body>
 </html>
