--- a/Portfolio 3 -  Admin Page/index.html
+++ b/Portfolio 3 -  Admin Page/index.html
@@ -61,24 +61,36 @@
             <canvas id="myChart" style="width: 100%; height: 80%; padding: 2%">
             </canvas>
           </div>
+          <!-- ................. -->
           <div class="tasks">
-            <h3>Tasks</h3>
-            <!-- <hr /> -->
-            <div class="tasks-contents">
-              <p>Borrowed Rents</p>
-              <p>14</p>
-            </div>
-            <!-- <hr> -->
-            <div class="tasks-contents">
-              <p>Trello Requests</p>
-              <p>2</p>
-            </div>
-            <!-- <hr> -->
-            <div class="tasks-contents">
-              <p>Marked Comments</p>
-              <p>14</p>
+            <div class="task-container">
+              <h3 class="task-line">Tasks</h3>
+
+              <!-- <hr /> -->
+              <div class="tasks-contents task-line">
+                <p>Borrowed Rents</p>
+                <div class="task-number">
+                  <p>14</p>
+                </div>
+              </div>
+              <!-- <hr> -->
+              <div class="tasks-contents task-line">
+                <p>Trello Requests</p>
+                <div class="task-number">
+                  <p>2</p>
+                </div>
+              </div>
+              <!-- <hr> -->
+              <div class="tasks-contents">
+                <p>Marked Comments</p>
+                <div class="task-number">
+                  <p>1</p>
+                </div>
+              </div>
+              <!-- end of task-container -->
             </div>
           </div>
+          <!-- ................. -->
           <div class="empty"></div>
         </section>
       </main>
