--- a/Portfolio 3 -  Admin Page/index.html
+++ b/Portfolio 3 -  Admin Page/index.html
@@ -31,30 +31,36 @@
               <h3>Earning (Monthly)</h3>
               <p>$400,000</p>
             </div>
-            <i class="fa-solid fa-calendar card-right"></i>
+            <div class="card-itag">
+              <i class="fa-solid fa-calendar card-right"></i>
+            </div>
           </div>
           <div class="card2">
             <div class="card-left">
               <h3>Earning (Annual)</h3>
               <p>$800,000</p>
             </div>
-            <i class="fa-solid fa-dollar-sign card-right"></i>
+            <div class="card-itag">
+              <i class="fa-solid fa-dollar-sign card-right"></i>
+            </div>
           </div>
           <div class="card3">
             <div class="card-left">
               <h3>Tasks</h3>
               <p>13</p>
             </div>
-
-            <i class="fa-solid fa-list-check card-right"></i>
+            <div class="card-itag">
+              <i class="fa-solid fa-list-check card-right"></i>
+            </div>
           </div>
           <div class="card4">
             <div class="card-left">
               <h3>Requests</h3>
               <p>26</p>
             </div>
-
-            <i class="fa-solid fa-message card-right"></i>
+            <div class="card-itag">
+              <i class="fa-solid fa-message card-right"></i>
+            </div>
           </div>
           <div class="chart">
             <h3>Earning Overrivew</h3>
@@ -64,8 +70,9 @@
           <!-- ................. -->
           <div class="tasks">
             <div class="task-container">
+          
               <h3 class="task-line">Tasks</h3>
-
+             
               <!-- <hr /> -->
               <div class="tasks-contents task-line">
                 <p>Borrowed Rents</p>
