header 구현 완료 => nav 남음 + 모바일 사이즈 구현

--- a/Portfolio 3 -  Admin Page/index.html
+++ b/Portfolio 3 -  Admin Page/index.html
@@ -17,14 +17,32 @@
   </head>
   <body>
     <div class="container">
-      <header></header>
+      <header>
+        <!-- 검색창 -->
+        <div class="search">
+          <input type="text" placeholder=" Search" />
+          <div class="search-itag">
+          <i class="fa-solid fa-magnifying-glass"></i>
+        </div>
+        </div>
+
+        <!-- 기타 -->
+        <div class="header-right">
+          <div class="card-itag">
+            <i class="fa-solid fa-bell"></i>
+          </div>
+          <div class="card-itag">
+            <i class="fa-solid fa-envelope"></i>
+          </div>
+          <p>Minny Park</p>
+          <!-- end of header-right -->
+        </div>
+      </header>
       <nav></nav>
 
       <main>
         <section class="grid-container">
-          <!-- <div class="title"> -->
           <h1 class="title">Dashboard</h1>
-          <!-- </div> -->
 
           <div class="card1">
             <div class="card-left">
@@ -70,24 +88,23 @@
           <!-- ................. -->
           <div class="tasks">
             <div class="task-container">
-          
               <h3 class="task-line">Tasks</h3>
-             
-              <!-- <hr /> -->
+
               <div class="tasks-contents task-line">
                 <p>Borrowed Rents</p>
                 <div class="task-number">
                   <p>14</p>
                 </div>
               </div>
-              <!-- <hr> -->
+
               <div class="tasks-contents task-line">
                 <p>Trello Requests</p>
+
                 <div class="task-number">
                   <p>2</p>
                 </div>
               </div>
-              <!-- <hr> -->
+
               <div class="tasks-contents">
                 <p>Marked Comments</p>
                 <div class="task-number">
