--- a/Portfolio 3 -  Admin Page/index.html
+++ b/Portfolio 3 -  Admin Page/index.html
@@ -22,8 +22,8 @@
         <div class="search">
           <input type="text" placeholder=" Search" />
           <div class="search-itag">
-          <i class="fa-solid fa-magnifying-glass"></i>
-        </div>
+            <i class="fa-solid fa-magnifying-glass"></i>
+          </div>
         </div>
 
         <!-- 기타 -->
@@ -38,8 +38,29 @@
           <!-- end of header-right -->
         </div>
       </header>
-      <nav></nav>
+      <!-- 맨 왼쪽 파란 태그 -->
+      <nav>
+        <div class="nav-container">
+          <div class="nav-list">
+            <i class="fa-solid fa-house"></i>
+            <p>price</p>
+          </div>
+          <div class="nav-list">
+            <i class="fa-solid fa-headphones"></i>
+            <p>Services</p>
+          </div>
+          <div class="nav-list">
+            <i class="fa-solid fa-flag"></i>
+            <p>Alerts</p>
+          </div>
+          <div class="nav-list">
+            <i class="fa-solid fa-chart-pie"></i>
+            <p>Stats</p>
+          </div>
+        </div>
+      </nav>
 
+      <!-- 맨 왼쪽 파란 태그 끝 -->
       <main>
         <section class="grid-container">
           <h1 class="title">Dashboard</h1>
