--- a/Portfolio 3 -  Admin Page/index.html
+++ b/Portfolio 3 -  Admin Page/index.html
@@ -37,6 +37,9 @@
           <p>Minny Park</p>
           <!-- end of header-right -->
         </div>
+        <div class="for-md">
+          <i class="fa-solid fa-bars"></i>
+        </div>
       </header>
       <!-- 맨 왼쪽 파란 태그 -->
       <nav>
@@ -102,7 +105,7 @@
             </div>
           </div>
           <div class="chart">
-            <h3>Earning Overrivew</h3>
+            <h3>Earning Overriview</h3>
             <canvas id="myChart" style="width: 100%; height: 80%; padding: 2%">
             </canvas>
           </div>
