모바일 레이아웃 완성!!

--- a/Portfolio 3 -  Admin Page/index.html
+++ b/Portfolio 3 -  Admin Page/index.html
@@ -37,8 +37,10 @@
           <p>Minny Park</p>
           <!-- end of header-right -->
         </div>
-        <div class="for-md">
-          <i class="fa-solid fa-bars"></i>
+        <div class="outer-for-md">
+          <div class="for-md">
+            <i class="fa-solid fa-bars"></i>
+          </div>
         </div>
       </header>
       <!-- 맨 왼쪽 파란 태그 -->
