모바일 사이즈 완성! - 아직 info-detail 정렬 문제 미해결

--- a/portfolio - SNS profile/index.html
+++ b/portfolio - SNS profile/index.html
@@ -40,30 +40,30 @@
         <div class="info-detail">
           <ul>
             <li>
-              <p class="empty first">Location</p>
+              <p class="first">Location</p>
               <div class="empty"></div>
-              <div class="empty second">
+              <div class="second">
                 <p>서울 마포구</p>
               </div>
             </li>
             <li>
-              <p class="empty first">Age</p>
+              <p class="first">Age</p>
               <div class="empty"></div>
-              <div class="empty second">
+              <div class="second">
                 <p>90년생</p>
               </div>
             </li>
             <li>
-              <p class="empty first">Experience</p>
+              <p class="first">Experience</p>
               <div class="empty"></div>
-              <div class="empty second">
+              <div class="second">
                 <p>신입</p>
               </div>
             </li>
             <li>
-              <p class="empty first">School</p>
+              <p class="first">School</p>
               <div class="empty"></div>
-              <div class="empty second">
+              <div class="second">
                 <p>천조국대 토목학과</p>
               </div>
             </li>
