에러 수정! 최종 완성!!

--- a/portfolio - SNS profile/index.html
+++ b/portfolio - SNS profile/index.html
@@ -41,28 +41,28 @@
           <ul>
             <li>
               <p class="first">Location</p>
-              <div class="empty"></div>
+
               <div class="second">
                 <p>서울 마포구</p>
               </div>
             </li>
             <li>
               <p class="first">Age</p>
-              <div class="empty"></div>
+
               <div class="second">
                 <p>90년생</p>
               </div>
             </li>
             <li>
               <p class="first">Experience</p>
-              <div class="empty"></div>
+
               <div class="second">
                 <p>신입</p>
               </div>
             </li>
             <li>
               <p class="first">School</p>
-              <div class="empty"></div>
+
               <div class="second">
                 <p>천조국대 토목학과</p>
               </div>
@@ -77,17 +77,21 @@
 
       <div class="grid-container">
         <div class="grid-work">
-
           <h2>WORKS</h2>
-          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Expedita odio, facere aliquam quas nam asperiores! </p>
-
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Expedita
+            odio, facere aliquam quas nam asperiores!
+          </p>
         </div>
         <div class="grid-mid">
-
           <div class="about">
-
             <h2>ABOUT</h2>
-            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Veritatis dolor nostrum iure adipisci mollitia veniam, excepturi ex numquam suscipit, voluptate sed voluptas explicabo. Magni earum nobis tempore enim? Repellendus, reiciendis?</p>
+            <p>
+              Lorem, ipsum dolor sit amet consectetur adipisicing elit.
+              Veritatis dolor nostrum iure adipisci mollitia veniam, excepturi
+              ex numquam suscipit, voluptate sed voluptas explicabo. Magni earum
+              nobis tempore enim? Repellendus, reiciendis?
+            </p>
           </div>
 
           <div class="skills">
@@ -100,45 +104,35 @@
               <button>Photoshop</button>
             </div>
           </div>
-
         </div>
         <div class="grid-findme">
-
           <i class="fa-solid fa-fire-flame-simple"></i>
           <p class="findme-p">Find me at Linkedout.com</p>
           <button class="findme-btn">Sign Up</button>
           <p class="findme-bot-p">Already a member?</p>
         </div>
         <div class="grid-people">
-
           <h4>People You Might Know</h4>
 
           <div class="people-list">
-
             <div class="list">
-
-              <img src="/img/profile-pic.png" alt="">
+              <img src="/img/profile-pic.png" alt="" />
               <div class="listinfo">
                 <h4>전라도 아귀</h4>
                 <p>Developer</p>
                 <i class="fa-solid fa-location-dot"> Seoul</i>
               </div>
-
             </div>
 
             <div class="list">
-
-              <img src="/img/profile-pic.png" alt="">
+              <img src="/img/profile-pic.png" alt="" />
               <div class="listinfo">
                 <h4>경상도 짝귀</h4>
                 <p>Developer</p>
                 <i class="fa-solid fa-location-dot"> Seoul</i>
               </div>
-
             </div>
-
           </div>
-
         </div>
       </div>
 
