--- a/Apple Music UI/index.html
+++ b/Apple Music UI/index.html
@@ -51,9 +51,13 @@
         card[0].style.opacity = y;
 
         // 왜 얘가 존재하면, 다음번 카드 opacity 기능이 실행되지 않습니다.
-        // card[0].style.width = `${y2}%`;
+        card[0].style.width = `${y2}%`;
 
-        card[1].style.opacity =  (-1 / 264) * h + 1264 / 264;
+        y= (-1 / 264) * h + 1264 / 264;
+        y2 = (-10/212)*h + (29200/212);
+
+        card[1].style.opacity = y;
+        card[1].style.width = `${y2}%`;
 
        
       });
